Fix overflow

--- a/docs/css/bootstrap.css
+++ b/docs/css/bootstrap.css
@@ -191,12 +191,21 @@ body {
   line-height: 18px;
   color: #404040;
 }
+.container1 {
+  height: 40px;
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  zoom: 1;
+
+}
+
 .container {
   width: 940px;
   margin-left: auto;
   margin-right: auto;
   zoom: 1;
-  overflow: auto;
+
 }
 .container:before, .container:after {
   display: table;
@@ -1227,13 +1236,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
  * Repeatable UI elements outside the base styles provided from the scaffolding
  * ---------------------------------------------------------------------------- */
 .topbar {
-  height: 50px;
+  height: 40px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10000;
-  overflow: auto;
+  overflow: visible;
 }
 .topbar a {
   color: #bfbfbf;
@@ -1337,8 +1346,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  overflow: auto;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 .topbar div > ul, .nav {
   display: block;
